--- a/css/index.css
+++ b/css/index.css
@@ -1,1 +1,245 @@
-/* Compile your LESS file! */
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+body {
+  line-height: 1;
+}
+ol,
+ul {
+  list-style: none;
+}
+blockquote,
+q {
+  quotes: none;
+}
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: '';
+  content: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+/* Set every element's box-sizing to border-box */
+* {
+  box-sizing: border-box;
+}
+
+html, body {
+  height: 100%;
+  font-size: 62.5%;
+}
+
+/* header, img, div, h1, p, button, nav, a {
+  border: 2px solid blue;
+} */
+
+header.headline {
+  display: flex;
+  justify-content: space-between;
+  /* background-color: rgb(247, 237, 214); */
+  background-color: rgb(209, 228, 242);
+  margin: 25px;
+  border-radius: 10px;
+}
+
+img.cv-photo {
+  width: 30%;
+  height: 90%;
+  margin: 50px 25px 0 25px;
+  border-radius: 10px;
+}
+
+div.header-text {
+  width: 58%;
+  display: flex;
+  flex-direction: column;
+  align-items: leftd;
+}
+
+h1 {
+  font-size: 5rem;
+  margin: 50px 0 25px 0;
+}
+
+.header-text p {
+  font-size: 2rem;
+  text-align: left;
+}
+
+.header-text button {
+  width: 15%;
+  height: 15%;
+  margin: 25px;
+  font-size: 1.5rem;
+  padding: 5px;
+  border: 1px solid;
+  border-radius: 10px;
+  background-color: rgba(230, 246, 247, 0.988);
+}
+
+.header-text h2 {
+  font-size: 3rem;
+  margin-bottom: 10px;
+}
+
+.header-text ul {
+  border-bottom: 1px solid;
+  margin-bottom: 25px;
+  text-align: center;
+  border-radius: 10px;
+}
+
+.header-text li {
+  font-size: 2rem;
+  background-color: rgba(230, 246, 247, 0.988);
+  border-top: 1px solid;
+  border-right: 1px solid;
+  border-left: 1px solid;
+  padding: 20px;
+  border-radius: 10px;
+}
+
+nav.navigation {
+  width: 20%;
+  display: flex;
+  flex-direction: column;
+  align-items: space-evenly;
+  border-top: 1px solid;
+  border-radius: 10px;
+  margin: 50px 10px 10px 0;
+}
+
+.navigation a {
+  text-decoration: none;
+  color: black;
+  font-size: 2rem;
+  text-align: center;
+  padding: 20px 0 20px 0;
+  border-right: 1px solid;
+  border-left: 1px solid;
+  border-bottom: 1px solid;
+  background-color: rgba(230, 246, 247, 0.988);
+  border-radius: 10px;
+}
+
+@media (min-width: 1025px) {
+  body {
+    background-color: green;
+  }
+}
+
+@media (max-width: 500px) {
+  body {
+    background-color: red;
+  }
+}
+
+
+
