--- a/less/index.less
+++ b/less/index.less
@@ -9,10 +9,33 @@
 
 @small-container-color: rgba(230, 246, 247, 0.988);
 
+@subheading-font-size: 3rem;
+
+@regular-text-font-size: 2rem;
+
+@mobile-border: 1px solid;
+
  // mix-ins:
  .border-styler() {
 	border-radius: 10px;
 	border: 1px solid;
+ }
+
+ .ul-border-styler() {
+	border-top: 1px solid;
+	border-radius: 10px;
+ }
+
+ .li-border-styler() {
+	border-right: 1px solid;
+	border-left: 1px solid;
+	border-bottom: 1px solid;
+	border-radius: 10px;
+ }
+
+ .column() {
+	 display: flex;
+	 flex-direction: column;
  }
 
 html, body, div, span, applet, object, iframe,
@@ -75,133 +98,142 @@ header.headline {
 	background-color: rgb(209, 228, 242);
 	margin: 25px;
 	.border-styler();
+
+		@media (max-width: 500px) {
+			flex-wrap: wrap-reverse;
+		}
   }
   
   img.cv-photo {
 	width: 30%;
 	height: 90%;
-	margin: 50px 25px 0 25px;
+	margin: 50px 25px 2% 25px;
 	border-radius: 10px;
+
+		@media (max-width: 500px) {
+			margin-bottom: 107%;
+		}
   }
   
-  div.header-text {
+  div.main-text {
 	width: 58%;
-	display: flex;
-	flex-direction: column;
-	align-items: leftd;
-  }
-  
-  h1 {
-	font-size: 5rem;
-	margin: 50px 0 25px 0;
-  }
-  
-  .header-text p {
-	font-size: 2rem;
-	text-align: left;
-  }
-  
-  .header-text button {
-	width: 100px;
-	height: 50px;
-	margin: 25px 0 25px 35%;
-	font-size: 1.5rem;
-	padding: 5px;
-	background-color: rgba(230, 246, 247, 0.988);
-	.border-styler();
-  }
-  
-  .header-text h2 {
-	font-size: 3rem;
-	margin-bottom: 1%;
-  }
-  
-  .header-text ul {
-	border-bottom: 1px solid;
-	margin-bottom: 25px;
-	text-align: center;
-	border-radius: 10px;
-  }
-  
-  .header-text li {
-	font-size: 2rem;
-	background-color: rgba(230, 246, 247, 0.988);
-	border-top: 1px solid;
-	border-right: 1px solid;
-	border-left: 1px solid;
-	padding: 20px;
-	border-radius: 10px;
+	.column();
+	align-items: left;
+
+		h1 {
+			font-size: 5rem;
+			margin: 50px 0 25px 0;
+		}
+
+		p {
+			font-size: @regular-text-font-size;
+			text-align: left;
+		}
+
+		button {
+			width: 100px;
+			height: 50px;
+			margin: 25px 0 25px 35%;
+			font-size: 1.5rem;
+			padding: 5px;
+			background-color: rgba(230, 246, 247, 0.988);
+			.border-styler();
+
+				@media (max-width: 500px) {
+					margin: 25px 300px 25px 0;
+				}
+		}
+
+		h2 {
+			font-size: @subheading-font-size;
+			margin-bottom: 1%;
+
+				@media (max-width: 500px) {
+					margin-right: 30px;
+				}
+		}
+
+		ul {
+			margin-bottom: 25px;
+			text-align: center;
+			.ul-border-styler();
+
+			@media (max-width: 500px) {
+				margin-right: 25px;
+			}
+		}
+
+		li {
+			font-size: @regular-text-font-size;
+			background-color: rgba(230, 246, 247, 0.988);
+			padding: 20px;
+			.li-border-styler();
+		}
   }
   
   nav.navigation {
 	width: 20%;
-	display: flex;
-	flex-direction: column;
 	align-items: space-evenly;
-	border-top: 1px solid;
-	border-radius: 10px;
 	margin: 50px 10px 10px 0;
-  }
-  
-  .navigation a {
-	text-decoration: none;
-	color: black;
-	font-size: 2rem;
-	text-align: center;
-	padding: 20px 0 20px 0;
-	border-right: 1px solid;
-	border-left: 1px solid;
-	border-bottom: 1px solid;
-	background-color: rgba(230, 246, 247, 0.988);
-	border-radius: 10px;
-  }
+	.ul-border-styler();
+	.column();
+
+		@media (max-width: 500px) {
+			flex-direction: row;
+			justify-content: flex-start;
+			margin: 2% 5% 0 5%;
+			border: 0;
+		}
+
+		a {
+			text-decoration: none;
+			color: black;
+			font-size: @regular-text-font-size;
+			text-align: center;
+			padding: 20px 0 20px 0;
+			background-color: rgba(230, 246, 247, 0.988);
+			.li-border-styler();
+
+				@media (max-width: 500px) {
+					padding: 20px;
+					border: @mobile-border;
+				}
+		}
+
+	}
   
   section.work-history-container {
 	background-color: rgb(209, 228, 242);
 	margin: 25px;
-	border-radius: 10px;
 	padding: 25px;
-	border: 1px solid;
-  }
-  
-  .work-history-container h2 {
-	font-size: 3rem;
-	margin: 0 0 1% 10%;
-  }
-  
-  .work-history-container ol {
-	width: 80%;
-	font-size: 2rem;
-	border-top: 1px solid;
-	border-radius: 10px;
-	margin: 0 auto;
-  }
-  
-  .work-history-container li {
-	text-align: center;
-	border-right: 1px solid;
-	border-left: 1px solid;
-	border-bottom: 1px solid;
-	background-color: rgba(230, 246, 247, 0.988);
-	padding: 20px;
-	border-radius: 10px;
+	.border-styler();
+
+		h2 {
+			font-size: @subheading-font-size;
+			margin: 0 0 1% 10%;
+		}
+
+		ul {
+			width: 80%;
+			font-size: @regular-text-font-size;
+			margin: 0 auto;
+			.ul-border-styler();
+		}
+
+		li {
+			text-align: center;
+			background-color: rgba(230, 246, 247, 0.988);
+			padding: 20px;
+			.li-border-styler();
+		}
+
   }
   
   footer {
 	text-align: center;
 	font-size: 1.5rem;
 	margin-bottom: 2%;
-  }
-  
-  @media (min-width: 1025px) {
-	body {
-	  background-color: green;
 	}
-  }
+	
   
-  @media (max-width: 500px) {
-	body {
-	  background-color: red;
-	}
-  }
 
